@@ -5,6 +5,10 @@ Summary of changes since AVaRICE 2.13
 
 . Replace the USB daemon by Posix threads (bug #15).
 
+. Implement JTAGICE3 handling
+
+. Implement the GDB 7+ flash write protocol (for the "load" command)
+
 
 Summary of changes in AVaRICE 2.13
 ==================================
