@@ -1,3 +1,9 @@
+2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/jtag3rw.cc(jtag3::jtagWrite): fix off-by-one error that lead
+	to writing wrong data
+	* src/remote.cc: Implement GDB 7+ flash write protocol
+
 2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* src/remote.cc: Implement the "monitor" GDB command.
